# no_more_job

./: CLAUDE.md  README.md
.claude/: settings.json
.github/workflows/: docker-build.yml
.playwright-mcp/: page-2026-05-30T03-03-20-921Z.yml
baitoru/: API_ANALYSIS.md  CLAUDE.md  README.md  baitoru  baitoru.py
baitoru/.playwright-mcp/: page-2026-05-29T15-27-30-005Z.yml  page-2026-05-29T15-40-47-036Z.yml
mcp/: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
mcp/baito_mcp/: __init__.py  baitoru_tools.py  mynavi_tools.py  server.py  townwork_tools.py  web.py
mcp/baitoru/: api.py  pyproject.toml  server.py
mcp/baitoru/baitoru_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
mcp/gateway/: gateway.py
mcp/mynavi/: api.py  pyproject.toml  server.py
mcp/mynavi/mynavi_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
mcp/townwork/: api.py  pyproject.toml  server.py
mcp/townwork/townwork_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
mynavi-baito/: API_REFERENCE.md  CLAUDE.md  README.md  api.py  cafe-snapshot.txt  main.py
mynavi-baito/.playwright-mcp/: page-2026-05-29T22-04-01-050Z.yml  page-2026-05-29T22-04-21-868Z.yml  page-2026-05-29T22-04-45-746Z.yml  page-2026-05-29T22-04-59-685Z.yml  page-2026-05-29T22-05-38-115Z.yml  page-2026-05-29T22-07-37-972Z.yml
townwork/: API_SPEC.md  CLAUDE.md  README.md  pyproject.toml
townwork/.playwright-mcp/: page-2026-05-29T15-50-49-946Z.yml  page-2026-05-29T15-51-18-696Z.yml  page-2026-05-29T15-53-52-770Z.yml  page-2026-05-29T15-53-58-639Z.yml  page-2026-05-29T15-54-17-206Z.yml  page-2026-05-29T15-55-01-597Z.yml  page-2026-05-29T16-09-33-160Z.yml  page-2026-05-29T16-09-47-479Z.yml  page-2026-05-29T16-16-01-942Z.yml
townwork/townwork/: api.py  cli.py
townwork/townwork_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
