[project]
name = "baito-mcp"
version = "0.2.0"
description = "バイトル・マイナビバイト・タウンワークを横断検索する統合 MCP サーバー"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "playwright>=1.40",
]

[project.scripts]
baito-mcp = "baito_mcp.server:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["baito_mcp"]
