[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "townwork-cli"
version = "1.0.0"
description = "タウンワーク求人サイトのCLIツール"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "playwright>=1.40",
    "rich>=13.0",
]

[project.scripts]
tw = "townwork.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["townwork*"]
