[project]
name = "baitoru-mcp"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
]

[project.scripts]
baitoru-mcp = "server:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["server", "api"]
